patch: added capability to have different configmaps with different name | updated readme file

--- a/charts/configmap-sync-controller/templates/serviceaccount.yaml
+++ b/charts/configmap-sync-controller/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "configmap-sync-controller.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "configmap-sync-controller.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
