--- a/config/rbac/service_account.yaml
+++ b/config/rbac/service_account.yaml
@@ -1,8 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  labels:
-    app.kubernetes.io/name: configmap-sync-controller
-    app.kubernetes.io/managed-by: kustomize
-  name: controller-manager
-  namespace: system
+  name: configmap-sync-controller
+  namespace: default
