--- a/examples/target-configmap.yaml
+++ b/examples/target-configmap.yaml
@@ -1,14 +1,13 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: source-config
+  name: target-config
 data:
   database.conf: |
     host=localhost
     port=5432
     user=admin
   app.properties: |
-    environment=production
     log.level=INFO
     max.connections=100
     timeout=30s
